objects/LLC_BI__Product_Feature__c.object
<CustomObject>
    <fields>
        <fullName>LLC_BI__Step_Interest_Rate__c</fullName>
        <description>This field will be used for Expere Doc Prep, which has not yet been implemented. This field is not required. It is manually populated. It designates the interest rate that applies to the corresponding step.</description>
        <inlineHelpText>The interest rate that applies to the corresponding step.</inlineHelpText>
        <label>Step Interest Rate</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Step_Rate_Period_Type__c</fullName>
        <description>This field will be used for Expere Doc Prep, which has not yet been implemented. This field is not required. It is manually populated. It specifies the period of time the corresponding step rate applies to.</description>
        <inlineHelpText>Specifies the period of time the corresponding step rate will apply.</inlineHelpText>
        <label>Step Rate Period Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Day(s)</fullName>
                </value>
                <value>
                    <fullName>Month(s)</fullName>
                </value>
                <value>
                    <fullName>Week(s)</fullName>
                </value>
                <value>
                    <fullName>Year(s)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Step_Rate_Period__c</fullName>
        <description>This field will be used for Expere Doc Prep, which has not yet been implemented. This field is not required. It is manually populated. It specifies the number of periods that the corresponding stepped rate applies to.</description>
        <inlineHelpText>The number of periods that the corresponding stepped rate will apply.</inlineHelpText>
        <label>Step Rate Period</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Subline_Type__c</fullName>
        <description>This picklist is used to indicate a product feature that specifies the subline type of a note.</description>
        <inlineHelpText>Specifies the subline type of a note.</inlineHelpText>
        <label>Subline Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Equipment Acquisition</fullName>
                </value>
                <value>
                    <fullName>Asset Acquisition</fullName>
                </value>
                <value>
                    <fullName>Term Loans</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Term_Step__c</fullName>
        <description>The user populates this required number field to specify the number of payments between increases in interest rate after the teaser term passes.</description>
        <inlineHelpText>Enter the number of payments between increases in interest rates after the passed teaser term.</inlineHelpText>
        <label>Term Step</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Tiered_Interest_Rate__c</fullName>
        <description>This field will be used for Expere Doc Prep, which has not yet been implemented. This field is not required. It is manually populated. It designates the interest rate that applies to the corresponding tier.</description>
        <inlineHelpText>The interest rate that applies to the corresponding tier.</inlineHelpText>
        <label>Tiered Interest Rate</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Tiered_Margin_Percent__c</fullName>
        <description>This field will be used for Expere Doc Prep, which has not yet been implemented. This field is not required. It is manually populated. It specifies the percentage that is added to (or subtracted from) the index to determine the applicable rate for a given account tier with variable rate tiers. If the margin will be subtracted from the index, this value would be negative. If the margin will be added to the index this value will be positive.</description>
        <inlineHelpText>The percentage that is added to (or subtracted from) the index to determine the applicable rate for a given account tier with variable rate tiers.</inlineHelpText>
        <label>Tiered Margin Percent</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__lookupKey__c</fullName>
        <description>The field is optional. If populated, the value must be unique across all the records of this type. The field typically contains an external identifier that is used to associate the record with its matching record in an external system. When importing data into nCino, the field can also be used to efficiently associate related records without the need to know the internal ID for the record. For more information, refer to https://developer.salesforce.com/docs/atlas.en-us.apexcode.meta/apexcode/langCon_apex_dml_nested_object.htm</description>
        <externalId>true</externalId>
        <label>lookupKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SCALC__Calculation_Method__c</fullName>
        <description>Administrators populate this optional picklist to indicate the calculation method for a specific product. By default, it is set to General Lending.</description>
        <inlineHelpText>Populate this picklist with the calculation method for a specific product.</inlineHelpText>
        <label>Calculation Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>LOAN_BUILDER</fullName>
                    <default>true</default>
                    <label>General Lending</label>
                </value>
                <value>
                    <fullName>ARM</fullName>
                    <label>Home Lending</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WKDDP__Certificate_Of_Deposit_Certificate_Type__c</fullName>
        <description>Administrators populate this optional picklist to determine the user&apos;s preferred certificate format, combo or CD-only, and type, true certificate or receipt.</description>
        <inlineHelpText>Select the preferred certificate format and type. The Certified Combo doc generates the long-form certificate, a signature card, and the account disclosure combination form.</inlineHelpText>
        <label>Certificate Of Deposit Certificate Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Certificated--Combo Doc</fullName>
                </value>
                <value>
                    <fullName>Certificated--CD Only</fullName>
                </value>
                <value>
                    <fullName>Uncertificated--Combo Doc</fullName>
                </value>
                <value>
                    <fullName>Uncertificated--Receipt Only</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WKDDP__Skip_DocPrep_iFrame__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Administrators select this optional boolean field to skip Docviewer for completely-mapped products. By default, it is false.</description>
        <inlineHelpText>Select this checkbox to skip Docview for completely-mapped products.</inlineHelpText>
        <label>Skip DocPrep iFrame</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WKEDP__Is_Agriculture__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Administrators manually populate this field. It is used to specify attributes on a loan. When enabled, it indicates that a product is used for Agricultural lending. When disabled, it can be used for any other type of loan. By default, it is disabled.</description>
        <label>Is Agriculture</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WKEDP__Is_Borrowing_Base__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Administrators manually populate this field. When enabled, it indicates that a product is used for borrower base lending. When disabled, it can be used for any other type of loan. By default, it is disabled.</description>
        <label>Is Borrowing Base</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WKEDP__Is_Consumer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Administrators manually populate this field. It is used to specify attributes on a loan. When enabled, it indicates that a product is used for Consumer lending. When disabled, it can be used for any other type of loan. By default, it is disabled.</description>
        <label>Is Consumer</label>
        <type>Checkbox</type>
    </fields>
    <label>Product Feature</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>LLC_BI__Purpose_Code__c</columns>
        <columns>LLC_BI__Financed_Fee_Calculations__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Product_Feature-{00000}</displayFormat>
        <label>Product Feature Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Features</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>